--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"guzzle/guzzle": "3.9.*@dev",
-        "guzzlehttp/cache-subscriber": "0.1.*@dev"
+		"guzzle/guzzle": "3.9.*@dev"
 	},
 	"autoload": {
 		"classmap": [
